--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,12 @@
     <title>Menu options</title>
     <!-- change this up! http://www.bootstrapcdn.com/bootswatch/ -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/cosmo/bootstrap.min.css" type="text/css" rel="stylesheet"/>
+    <!-- <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/cosmo/bootstrap.min.css" type="text/css" rel="stylesheet"/> -->
   </head>
 
-  <body>
+  <body style="margin: 0px">
     <div id="app"></div>
+
     <script src="client.min.js"></script>
   </body>
 </html>
